@@ -1,0 +1,3 @@
+[D-BUS Service]
+Name=com.nokia.monkey_bubble
+Exec=@BINDIR@/monkey-bubble
